chore: add common audio/video file extensions to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
 /.env
+*.pyc
 *.srt
 *.vtt
+*.ytdl
+*.part
+*.temp
+*.m4a
+*.mp4
+*.webm
+*.wav
+*.flac
+*.aac
+*.m4a
+*.ogg
+*.opus
+*.webm
+*.mp4
+*.mov
+*.avi
+*.mkv
+*.wmv
+*.3gp
+*.amr
+*.aiff
+*.au
+*.caf
