--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,22 @@
+# Ignore .DS_Store files
+.DS_Store
+
+# Ignore environment variables
 /.env
+
+# Ignore Python cache files
 *.pyc
+
+# Ignore subtitle files
 *.srt
 *.vtt
+
+# Ignore temporary files
 *.ytdl
 *.part
 *.temp
+
+# Ignore media files
 *.m4a
 *.mp4
 *.webm
